--- a/Responsiveimages.html
+++ b/Responsiveimages.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <picture>
-        <source srcset="spinmopbucket.jpg" media="(max-widith: 600)">
-        <source srcset="moptowels.jpg" media="(max-widith:1200px)">
-        <source srcset="CLEAN.jpeg" media="(max-widith: 400px)">
+        <source srcset="spinmopbucket.jpg" media="(max-width: 600px)">
+        <source srcset="moptowels.jpg" media="(max-width: 1200px)">
+        <source srcset="CLEAN.jpeg" media="(max-width: 400px)">
         <source srcset="Broom.jpg">
         <img srcset="rubbergloves.jpg" alt="picture of rubbergloves">
         <p style="background-color: chocolate;">The picture element in HTML allows a web to provide different versions of the same image 
