--- a/htmlpagetitle.html
+++ b/htmlpagetitle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love</title>
-    <link rel="icon" type="img/x-icon" href="favicon.ico"
+    <link rel="icon" type="img/x-icon" href="favicon.ico">
     
 </head>
 <body></body>
